--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.6.0
+asgiref==3.8.1
 certifi==2022.12.7
 cffi==1.15.1
 chardet==3.0.4
@@ -8,22 +8,29 @@ cryptography==40.0.1
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.6
-Django==4.1.7
+dj-database-url==2.3.0
+Django==5.1.4
 django-allauth==0.54.0
 django-cors-headers==3.14.0
+django-filter==24.3
+django-heroku==0.3.1
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==5.3.1
 filelock==3.10.0
 future==0.18.3
 geocoder==1.38.1
 geographiclib==2.0
 geopy==2.3.0
+gunicorn==23.0.0
 idna==2.8
 oauthlib==3.2.2
+packaging==24.2
 Pillow==9.4.0
 platformdirs==3.1.1
+psycopg2==2.9.10
 pycparser==2.21
 PyJWT==1.7.1
 pypng==0.20220715.0
@@ -40,3 +47,4 @@ typing_extensions==4.5.0
 tzdata==2022.7
 urllib3==1.25.11
 virtualenv==20.21.0
+whitenoise==6.8.2
