--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,62 @@
 asgiref==3.8.1
-certifi==2025.1.31
-charset-normalizer==3.4.1
+cachetools==5.5.0
+certifi==2022.12.7
+cffi==1.15.1
+chardet==3.0.4
+click==8.1.3
 colorama==0.4.6
+cryptography==40.0.1
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.6
 dj-database-url==2.3.0
-Django==5.1.7
-django-cors-headers==4.7.0
-django-filter==25.1
+dj-rest-auth==7.0.1
+Django==5.1.4
+django-allauth==0.54.0
+django-cors-headers==3.14.0
+django-filter==24.3
 django-heroku==0.3.1
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.5.0
+django-rest-auth==0.9.5
+django-rest-framework==0.1.0
+djangorestframework==3.14.0
+djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==5.3.1
+filelock==3.10.0
+future==0.18.3
+geocoder==1.38.1
 geographiclib==2.0
-geopy==2.4.1
-idna==3.10
-pillow==11.1.0
+geopy==2.3.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+gunicorn==23.0.0
+httplib2==0.22.0
+idna==2.8
+oauthlib==3.2.2
+packaging==24.2
+Pillow==9.4.0
+platformdirs==3.1.1
 psycopg2==2.9.10
-PyJWT==2.9.0
-qrcode==8.0
-requests==2.32.3
-sqlparse==0.5.3
-stripe==11.6.0
-typing_extensions==4.12.2
-tzdata==2025.2
-urllib3==2.3.0
-whitenoise==6.9.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.21
+PyJWT==2.10.1
+pyparsing==3.2.1
+pypng==0.20220715.0
+python3-openid==3.2.0
+pytz==2022.7.1
+qrcode==7.4.2
+ratelim==0.1.6
+requests==2.22.0
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
+sqlparse==0.4.3
+stripe==5.4.0
+typing_extensions==4.5.0
+tzdata==2022.7
+urllib3==1.25.11
+virtualenv==20.21.0
+whitenoise==6.8.2
